--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,13 +8,14 @@
 
 html, body {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     background-color: black;
 }
 
 main {
     position: relative;
-    height: 108vh;
+    height: 100vh;
+    width: 100VW;
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
@@ -35,7 +36,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height:471px;
 }
 
